# milky

./: .gitignore  Cargo.toml  README.md  show.js  style.css
assets/: inline.css  inline.css.pre  show.js  style.css
example/: Local.toml  Milky.toml  hello.md
example/en/: hello.md
example/ru/: hello.md
src/: date.rs  html.rs  icon.rs  lang.rs  main.rs  rust.rs
