[package]
name = "milky"
version = "0.1.0"
edition = "2024"

[dependencies]
pulldown-cmark = { version = "0.13", default-features = false }
syn = { version = "2.0", default-features = false, features = ["parsing"] }

[dependencies.proc-macro2]
version = "1.0"
default-features = false
features = ["span-locations"]
